# mcp-pg-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  OPTIMIZATIONS.md  QUICK_TEST.md  README.md  SKILLS.md  TEST_SETUP.md  UPGRADE_PLAN.md  test-mcp-postgres  tools.json
.github/workflows/: ci.yml
benches/: micro_bench.rs  pool_stress_bench.rs
chocolatey-mcp-postgres/: README.md  mcp-postgres.nuspec
chocolatey-mcp-postgres/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
guides/: BENCHMARKING.md  CODE_OPTIMIZATION.md  INDEX.md  INSTALLATION.md  LATENCY_MEASUREMENT.md  LOW_LEVEL_OPTIMIZATION.md  MCP_COMPLIANCE.md  MCP_SPEC_VERIFICATION.md  OPTIMIZATION_STRATEGIES.md  REVIEW_SUMMARY.md  UPGRADE.md
homebrew-mcp-postgres/: README.md
homebrew-mcp-postgres/Formula/: mcp_postgres.rb
src/: auth.rs  buffers.rs  config.rs  errors.rs  http.rs  intern.rs  lib.rs  lockfree_pool.rs  main.rs  metrics.rs  pool.rs  protocol.rs  server.rs  ssrf.rs  tls.rs  tools.rs  validation.rs
src/actions/: batch.rs  config.rs  connections.rs  data_io.rs  data_tools.rs  db_mgmt.rs  ext_mgmt.rs  health.rs  index_advisor.rs  maint_ext.rs  maintenance.rs  migration_helpers.rs  mod.rs  monitoring.rs  pg_textsearch.rs  pgvector.rs  query.rs  replication.rs  schema.rs  schema_alter.rs  schema_health.rs  security.rs  security_audit.rs  session_mgmt.rs  timescaledb.rs  transactions.rs  user_mgmt.rs
test/: schema.sql  setup_and_test.sh
tests/: all_tools_complete_test.rs  api_contract_test.rs  bytes_fetched_test.rs  http_e2e_test.rs  http_transport_test.rs  integration_all_tools.rs  integration_batch_returning.rs  integration_dual_protocol.rs  integration_pool_sizing.rs  integration_stdio.rs  integration_test_data_tools.rs  load_test.rs  multi_transport_test.rs  pool_benchmarks.rs  protocol_bytes_test.rs  run_all_tests.sh  setup_and_test.sh  socket_buffer_test.rs  test_schema.sql  tool_actions_test.rs
